Update Passport.java