@@ -1,157 +1,179 @@
-package programs;
+package com.passport.system;
 
-public class Passport {
-    // Instance variables for names, separator, and passport stamps
-    private String firstname;
-    private String middlename;
-    private String lastname;
-    private char separator;
-    private StringBuffer passportStamps;
-    // Static variable to keep track of the number of Passport objects created
-    private static int numOfPassportObj = 0;
+import java.time.LocalDate;
+import java.time.format.DateTimeFormatter;
+import java.util.Objects;
+import java.util.UUID;
 
-    // Default constructor initializing with sample names
-    public Passport() {
-        this("Samplefirstname", "Samplemiddlename", "Samplelastname");
+/**
+ * Represents a passport with detailed personal information and travel stamps.
+ * This class is immutable to ensure data integrity once created.
+ */
+public final class Passport {
+
+    private final UUID passportId;
+    private final String firstName;
+    private final String middleName;
+    private final String lastName;
+    private final LocalDate dateOfBirth;
+    private final String nationality;
+    private final LocalDate expirationDate;
+    private final StringBuilder passportStamps;
+
+    /**
+     * Private constructor to be used by the Builder.
+     */
+    private Passport(Builder builder) {
+        this.passportId = UUID.randomUUID();
+        this.firstName = builder.firstName;
+        this.middleName = builder.middleName;
+        this.lastName = builder.lastName;
+        this.dateOfBirth = builder.dateOfBirth;
+        this.nationality = builder.nationality;
+        // Expiration date is 10 years from the date of birth for simplicity
+        this.expirationDate = builder.dateOfBirth.plusYears(10);
+        this.passportStamps = new StringBuilder();
     }
 
-    // Constructor with first and last name, initializes middle name as empty
-    public Passport(String firstname, String lastname) {
-        this.firstname = validateAndFormat(firstname);
-        this.middlename = "";
-        this.lastname = validateAndFormat(lastname);
-        this.separator = ','; 
-        this.passportStamps = new StringBuffer(); 
-        numOfPassportObj++; 
+    // --- Getters ---
+    public UUID getPassportId() {
+        return passportId;
     }
 
-    // Constructor with first, middle, and last names
-    public Passport(String firstname, String middlename, String lastname) {
-        this.firstname = validateAndFormat(firstname);
-        this.middlename = validateAndFormat(middlename);
-        this.lastname = validateAndFormat(lastname);
-        this.separator = ','; 
-        this.passportStamps = new StringBuffer(); 
-        numOfPassportObj++; 
+    public String getFirstName() {
+        return firstName;
     }
 
-    // Copy constructor for creating a new Passport from an existing one
-    public Passport(Passport passport) {
-        this.firstname = passport.firstname;
-        this.middlename = passport.middlename;
-        this.lastname = passport.lastname;
-        this.separator = passport.separator;
-        this.passportStamps = new StringBuffer(passport.passportStamps.toString()); 
-        numOfPassportObj++; 
+    public String getMiddleName() {
+        return middleName;
     }
 
-    // Returns a string representation of the passport
+    public String getLastName() {
+        return lastName;
+    }
+
+    public LocalDate getDateOfBirth() {
+        return dateOfBirth;
+    }
+
+    public String getNationality() {
+        return nationality;
+    }
+
+    public LocalDate getExpirationDate() {
+        return expirationDate;
+    }
+
+    public String getPassportStamps() {
+        return passportStamps.toString();
+    }
+
+    /**
+     * Adds a travel stamp to the passport.
+     * @param stamp The country or location to add as a stamp.
+     */
+    public void addStamp(String stamp) {
+        if (stamp != null && !stamp.trim().isEmpty()) {
+            if (this.passportStamps.length() > 0) {
+                this.passportStamps.append(", ");
+            }
+            this.passportStamps.append(stamp.trim());
+        }
+    }
+
+    /**
+     * Checks if the passport is expired relative to the current date.
+     * @return true if the passport is expired, false otherwise.
+     */
+    public boolean isExpired() {
+        return LocalDate.now().isAfter(expirationDate);
+    }
+
+    @Override
     public String toString() {
-        if (middlename.isBlank()) {
-            return lastname + separator + firstname; 
-        } else {
-            return lastname + separator + firstname + separator + middlename; 
-        }
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("MM/dd/yyyy");
+        String middle = (middleName == null || middleName.isEmpty()) ? "" : " " + middleName;
+        return String.format(
+            "Passport [ID=%s, Name=%s%s %s, DOB=%s, Nationality=%s, Expires=%s, Expired=%b]",
+            passportId.toString().substring(0, 8),
+            firstName,
+            middle,
+            lastName,
+            dateOfBirth.format(formatter),
+            nationality,
+            expirationDate.format(formatter),
+            isExpired()
+        );
     }
 
-    // Adds a stamp to the passport if it's valid
-    public Passport addStamp(String stamp) {
-        if (stamp != null && !stamp.isBlank()) {
-            passportStamps.append(stamp); 
-        }
-        return this; 
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (o == null || getClass() != o.getClass()) return false;
+        Passport passport = (Passport) o;
+        return Objects.equals(firstName, passport.firstName) &&
+               Objects.equals(middleName, passport.middleName) &&
+               Objects.equals(lastName, passport.lastName) &&
+               Objects.equals(dateOfBirth, passport.dateOfBirth) &&
+               Objects.equals(nationality, passport.nationality);
     }
 
-    // Returns a copy of the passport stamps
-    public StringBuffer getStamps() {
-        return new StringBuffer(passportStamps.toString());
+    @Override
+    public int hashCode() {
+        return Objects.hash(firstName, middleName, lastName, dateOfBirth, nationality);
     }
 
-    // Returns the current separator character
-    public char getSeparator() {
-        return separator;
-    }
+    /**
+     * Builder class for creating Passport instances.
+     * Enforces required fields and provides a fluent interface.
+     */
+    public static class Builder {
+        private String firstName;
+        private String lastName;
+        private LocalDate dateOfBirth;
+        private String nationality;
+        private String middleName = "";
 
-    // Sets a new separator if it's valid
-    public boolean setSeparator(char separator) {
-        if (separator == '@' || Character.isSpaceChar(separator) || 
-                Character.isLetter(separator)) {
-            return false; 
-        }
-        if (this.separator == separator) {
-            return true; 
-        }
-        this.separator = separator; 
-        return true;
-    }
-
-    // Checks equality between two Passport objects
-    public boolean equals(Object obj) {
-        if (this == obj) {
-            return true; 
-        }
-        if (obj == null || getClass() != obj.getClass()) {
-            return false; 
-        }
-        Passport other = (Passport) obj;
-        return firstname.equals(other.firstname) && 
-               middlename.equals(other.middlename) &&
-               lastname.equals(other.lastname);
-    }
-
-    // Compares this passport with another for ordering
-    public int compareTo(Passport passport) {
-        return this.toString().compareTo(passport.toString());
-    }
-
-    // Returns the total number of Passport objects created
-    public static int getNumberOfPassportObjects() {
-        return numOfPassportObj;
-    }
-
-    // Resets the count of Passport objects
-    public static void resetNumberOfPassportObjects() {
-        numOfPassportObj = 0;
-    }
-
-    // Normalizes name case based on the upper case parameter
-    public static Passport normalize(Passport passport, boolean uppercase) {
-        if (passport == null) {
-            return null; 
+        public Builder(String firstName, String lastName, LocalDate dateOfBirth, String nationality) {
+            this.firstName = Objects.requireNonNull(firstName, "First name cannot be null.");
+            this.lastName = Objects.requireNonNull(lastName, "Last name cannot be null.");
+            this.dateOfBirth = Objects.requireNonNull(dateOfBirth, "Date of birth cannot be null.");
+            this.nationality = Objects.requireNonNull(nationality, "Nationality cannot be null.");
         }
 
-        if (uppercase) {
-            passport.firstname = passport.firstname.toUpperCase();
-            passport.lastname = passport.lastname.toUpperCase();
-            passport.middlename = passport.middlename.toUpperCase();
-        } else {
-            passport.firstname = passport.firstname.toLowerCase();
-            passport.lastname = passport.lastname.toLowerCase();
-            passport.middlename = passport.middlename.toLowerCase();
+        public Builder middleName(String middleName) {
+            this.middleName = middleName;
+            return this;
         }
 
-        return passport; 
-    }
-
-    // Changes the last name if the new name is valid
-    public boolean changeLastname(String lastname) {
-        if (lastname == null || lastname.isBlank()) {
-            return false; 
-        } else {
-            this.lastname = validateAndFormat(lastname); 
-            return true;
+        public Passport build() throws InvalidPassportDataException {
+            validate();
+            return new Passport(this);
         }
-    }
 
-    // Validates and formats a given name
-    private static String validateAndFormat(String name) {
-        if (name == null || name.isBlank()) {
-            return " "; 
-        } else {
-            String trimmedName = name.trim(); 
-            String firstLetter = trimmedName.substring(0, 1).toUpperCase(); 
-            String remainingLetters = trimmedName.substring(1).toLowerCase(); 
-            return firstLetter + remainingLetters; 
+        private void validate() throws InvalidPassportDataException {
+            if (firstName.trim().isEmpty() || !firstName.matches("[a-zA-Z.-]+")) {
+                throw new InvalidPassportDataException("Invalid first name format.");
+            }
+            if (lastName.trim().isEmpty() || !lastName.matches("[a-zA-Z.-]+")) {
+                throw new InvalidPassportDataException("Invalid last name format.");
+            }
+            if (dateOfBirth.isAfter(LocalDate.now())) {
+                throw new InvalidPassportDataException("Date of birth cannot be in the future.");
+            }
+             this.firstName = capitalize(firstName);
+             this.lastName = capitalize(lastName);
+             if(this.middleName != null && !this.middleName.isEmpty()){
+                this.middleName = capitalize(this.middleName);
+             }
+        }
+
+        private String capitalize(String name) {
+            if (name == null || name.isEmpty()) {
+                return name;
+            }
+            return name.substring(0, 1).toUpperCase() + name.substring(1).toLowerCase();
         }
     }
 }
+
